--- a/Day3Task- Resume(HTML and CSS)/Index.html
+++ b/Day3Task- Resume(HTML and CSS)/Index.html
@@ -12,7 +12,7 @@
     <table style="width: 70%; table-layout: fixed;">
         <tr >
             <td style="background-color: grey; height: 250px; text-align: center; " colspan="4">
-                <img src="CV_Image.jpg" alt="Header Image" style="margin-top: 50px;border-style: dotted;border-color: orange; border-radius: 50%; vertical-align: middle; height: 150px; ">
+                <img src="Image.jpg" alt="Header Image" style="margin-top: 50px;border-style: dotted;border-color: orange; border-radius: 50%; vertical-align: middle; height: 150px; ">
                 <h1 style="background-color:orange; border-radius: 5px; margin-left: 350px; margin-right: 350px; margin-top: 0;">BRIAN DUDEY</h1>
             </td>
         </tr>
