--- a/Obesity Banner/index.html
+++ b/Obesity Banner/index.html
@@ -45,34 +45,9 @@
                 </div>
             </div>
         </div>
-		
-		<div class="section-5 margin-block">
-            <div class="part-1">
-                <div class="content-body">
-                    <div class="content-left">
-                        <div class="content">
-						 <div class="title">OBESITY IS LINKED TO MORE CHRONIC CONDITION THAN:</div>
-                        </div>
-                    </div>
-                    <div class="content-right">
-                        <div class="content">
-                            <p>smoke
-                            </p>
-                            <p>
-                                powery
-                            </p>
-							<p>
-                                drinking
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="section-2 margin-block">
             <div class="part-1">
-                <div class="title">RISK FACTORS ⚠️ </div>
+                <div class="title">RISK FACTORS</div>
                 <div class="content-body">
                     <div class="content-left">
                         <div class="content">
